# get-cookies-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md  rustfmt.toml
examples/: github-readme.rs  github.rs  simple.rs
src/: cookie_reader.rs  lib.rs  main.rs  read_cookie.rs
src/read_cookie/: mod.rs
src/read_cookie/linux/: mod.rs  read_cookie_until.rs
src/read_cookie/mac/: read_cookie_until.rs  user_event.rs
src/read_cookie/win/: cookie_reader.rs  mod.rs  read_cookie.rs
